kubernetes/infrastructure/prometheus/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '9999'
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
    - port: 9999
      targetPort: 9999
