kubernetes/infrastructure/prometheus/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "prometheus.cluster.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus
                port:
                  number: 9999
    - host: "prometheus.cluster.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus
                port:
                  number: 9999
